fixed layout for dates on mobile
* added DPI query for date blocks

--- a/style.less
+++ b/style.less
@@ -229,7 +229,7 @@ body {
     color: gray;
 }
 
-@media only screen and (max-width: 60rem) 
+@media only screen and (max-width: 60rem), (-webkit-min-device-pixel-ratio: 2)
 {
     .jobsubtitle
     {
@@ -240,7 +240,7 @@ body {
 
     }
 }
-@media only screen and (min-width: 60rem) 
+@media only screen and (min-width: 60rem), (-webkit-min-device-pixel-ratio: 2)
 {
     .jobsubtitle::before {
         content: "| ";
